fixing nav overlap on mobile device

--- a/style.css
+++ b/style.css
@@ -24,21 +24,13 @@ html, body {
     background-size: 100% 100%; 
 }
 
-.backImg1 {
-    width:100%;
-    height: 100vh;
-    background-image: url(./images/code.jpeg);
-    background-attachment: fixed;
-    background-size: 100% 100%; 
-}
 
 .top-container {
-    /* margin: 0; */
     width: 100%;
-    position: fixed;
     top: 0;
     z-index: 5;
-    background-color: black;
+    /* background-color: black; */
+    border-bottom: 10px solid white;
 }
 
 /* heading rules applied */
@@ -81,12 +73,11 @@ h4 {
 
 #navi {
     width: 100%;
-    position: fixed;
-    top: 90px;
+    position: sticky ;
     margin: 0 auto;
     font-family: 'Source Code Pro', monospace;
     text-align: center;
-    padding-top: 20px;
+    /* padding-top: 20px; */
     clear: both;
     z-index: 5;
     
@@ -94,7 +85,7 @@ h4 {
 
 .nav-img {
     margin: 0 auto;
-    height: 300px;
+    height: 2em;
 }
 
 .list-view {
@@ -132,12 +123,13 @@ h4 {
 /* Main element class defined  */
 
 .container {
-    margin: 0 10vh;
+    margin: 20vh 10vh;
     width: 60%;
     float: left;
 }
 
 .social-icons {
+    margin: 20vh 10vh;
     width: 10%;
     float: right;
 }
